# docs/swagger.json
@@ -172,14 +172,41 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Page no",
+                        "description": "Page",
                         "name": "page",
                         "in": "query"
                     },
                     {
                         "type": "integer",
-                        "description": "records per page",
-                        "name": "page_size",
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "posts.id",
+                            "title",
+                            "content"
+                        ],
+                        "type": "string",
+                        "description": "Sort By",
+                        "name": "sort_by",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "ASC",
+                            "DESC"
+                        ],
+                        "type": "string",
+                        "description": "Sort",
+                        "name": "sort",
                         "in": "query"
                     }
                 ],
@@ -230,6 +257,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "Title",
                         "description": "Title",
                         "name": "title",
                         "in": "formData",
@@ -237,6 +265,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "Content",
                         "description": "Content",
                         "name": "content",
                         "in": "formData",
@@ -244,6 +273,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "87c76e22-e2f0-4ebf-bda8-56802c0a0577",
                         "description": "User UUID",
                         "name": "user_uuid",
                         "in": "formData",
@@ -251,6 +281,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "22863142-1cfe-48cc-9640-ea88926429a4",
                         "description": "Post Category UUID",
                         "name": "post_category_uuid",
                         "in": "formData",
@@ -306,14 +337,40 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Page no",
+                        "description": "Page",
                         "name": "page",
                         "in": "query"
                     },
                     {
                         "type": "integer",
-                        "description": "records per page",
-                        "name": "page_size",
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "id",
+                            "name"
+                        ],
+                        "type": "string",
+                        "description": "Sort By",
+                        "name": "sort_by",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "ASC",
+                            "DESC"
+                        ],
+                        "type": "string",
+                        "description": "Sort",
+                        "name": "sort",
                         "in": "query"
                     }
                 ],
@@ -364,6 +421,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "Category Name",
                         "description": "Name",
                         "name": "name",
                         "in": "formData",
@@ -419,6 +477,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "22863142-1cfe-48cc-9640-ea88926429a4",
                         "description": "Post Category ID",
                         "name": "id",
                         "in": "path",
@@ -478,6 +537,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "22863142-1cfe-48cc-9640-ea88926429a4",
                         "description": "Post Category ID",
                         "name": "id",
                         "in": "path",
@@ -485,6 +545,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "Category Name Update",
                         "description": "Name",
                         "name": "name",
                         "in": "formData",
@@ -544,6 +605,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "22863142-1cfe-48cc-9640-ea88926429a4",
                         "description": "Post Category ID",
                         "name": "id",
                         "in": "path",
@@ -605,6 +667,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "f72cb686-2fc3-4147-8183-f93684780765",
                         "description": "Post ID",
                         "name": "id",
                         "in": "path",
@@ -664,6 +727,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "f72cb686-2fc3-4147-8183-f93684780765",
                         "description": "Post ID",
                         "name": "id",
                         "in": "path",
@@ -671,6 +735,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "Title Update",
                         "description": "Title",
                         "name": "title",
                         "in": "formData",
@@ -678,6 +743,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "Content Update",
                         "description": "Content",
                         "name": "content",
                         "in": "formData",
@@ -685,6 +751,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "87c76e22-e2f0-4ebf-bda8-56802c0a0577",
                         "description": "User UUID",
                         "name": "user_uuid",
                         "in": "formData",
@@ -692,6 +759,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "22863142-1cfe-48cc-9640-ea88926429a4",
                         "description": "Post Category UUID",
                         "name": "post_category_uuid",
                         "in": "formData",
@@ -751,6 +819,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "f72cb686-2fc3-4147-8183-f93684780765",
                         "description": "Post ID",
                         "name": "id",
                         "in": "path",
@@ -812,14 +881,42 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Page no",
+                        "description": "Page",
                         "name": "page",
                         "in": "query"
                     },
                     {
                         "type": "integer",
-                        "description": "records per page",
-                        "name": "page_size",
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "id",
+                            "name",
+                            "email",
+                            "username"
+                        ],
+                        "type": "string",
+                        "description": "Sort By",
+                        "name": "sort_by",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "ASC",
+                            "DESC"
+                        ],
+                        "type": "string",
+                        "description": "Sort",
+                        "name": "sort",
                         "in": "query"
                     }
                 ],
@@ -870,6 +967,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "Name",
                         "description": "Name",
                         "name": "name",
                         "in": "formData",
@@ -877,6 +975,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "username",
                         "description": "Username",
                         "name": "username",
                         "in": "formData",
@@ -884,6 +983,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "email@gmail.com",
                         "description": "Email",
                         "name": "email",
                         "in": "formData",
@@ -947,6 +1047,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "f72cb686-2fc3-4147-8183-f93684780765",
                         "description": "User ID",
                         "name": "id",
                         "in": "path",
@@ -1006,6 +1107,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "f72cb686-2fc3-4147-8183-f93684780765",
                         "description": "User ID",
                         "name": "id",
                         "in": "path",
@@ -1013,6 +1115,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "Name Update",
                         "description": "Name",
                         "name": "name",
                         "in": "formData",
@@ -1020,6 +1123,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "usernameupdate",
                         "description": "Username",
                         "name": "username",
                         "in": "formData",
@@ -1027,6 +1131,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "emailupdate@gmail.com",
                         "description": "Email",
                         "name": "email",
                         "in": "formData",
@@ -1094,6 +1199,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "f72cb686-2fc3-4147-8183-f93684780765",
                         "description": "User ID",
                         "name": "id",
                         "in": "path",
@@ -1147,20 +1253,6 @@
                     "Public Post"
                 ],
                 "summary": "Get all post",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Page no",
-                        "name": "page",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "records per page",
-                        "name": "page_size",
-                        "in": "query"
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1175,6 +1267,12 @@
                         }
                     },
                     "403": {
+                        "description": "Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "404": {
                         "description": "Error",
                         "schema": {
                             "$ref": "#/definitions/response.ErrorResponse"
@@ -1199,6 +1297,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "22863142-1cfe-48cc-9640-ea88926429a4",
                         "description": "Category ID",
                         "name": "id",
                         "in": "path",
@@ -1223,6 +1322,12 @@
                         "schema": {
                             "$ref": "#/definitions/response.ErrorResponse"
                         }
+                    },
+                    "404": {
+                        "description": "Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
                     }
                 }
             }
@@ -1243,6 +1348,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "87c76e22-e2f0-4ebf-bda8-56802c0a0577",
                         "description": "User ID",
                         "name": "id",
                         "in": "path",
@@ -1267,6 +1373,12 @@
                         "schema": {
                             "$ref": "#/definitions/response.ErrorResponse"
                         }
+                    },
+                    "404": {
+                        "description": "Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
                     }
                 }
             }
@@ -1287,6 +1399,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "f72cb686-2fc3-4147-8183-f93684780765",
                         "description": "Post ID",
                         "name": "id",
                         "in": "path",
@@ -1307,6 +1420,12 @@
                         }
                     },
                     "403": {
+                        "description": "Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "404": {
                         "description": "Error",
                         "schema": {
                             "$ref": "#/definitions/response.ErrorResponse"
@@ -1518,7 +1637,8 @@
                     "type": "string"
                 },
                 "status": {
-                    "type": "boolean"
+                    "type": "boolean",
+                    "example": false
                 }
             }
         },
